third_party/move/move-compiler/tests/move_check/skip_attribute_checks/aptos_stdlib_attributes.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/skip_attribute_checks/aptos_stdlib_attributes.move:2:10
  │
2 │     #[a, a(x = 0)]
  │       -  ^^^^^^^^ Duplicate attribute 'a' attached to the same item
  │       │   
  │       Attribute previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/skip_attribute_checks/aptos_stdlib_attributes.move:6:12
  │
6 │     #[b(a, a = 0, a(x = 1))]
  │         -  ^^^^^ Duplicate attribute 'a' attached to the same item
  │         │   
  │         Attribute previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/skip_attribute_checks/aptos_stdlib_attributes.move:6:19
  │
6 │     #[b(a, a = 0, a(x = 1))]
  │         -         ^^^^^^^^ Duplicate attribute 'a' attached to the same item
  │         │          
  │         Attribute previously given here

